partial/force-app/main/default/objects/Lead/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>Created to capture the Area of the Property</description>
    <label>Area</label>
    <length>50</length>
    <type>Text</type>
</CustomField>