partial/force-app/main/default/objects/Lead/fields/CompanyReferral__c.field-meta.xml
<CustomField>
    <fullName>CompanyReferral__c</fullName>
    <description>Referrer&apos;s Company Information</description>
    <label>Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>