partial/force-app/main/default/objects/Lead/fields/ContactReferral__c.field-meta.xml
<CustomField>
    <fullName>ContactReferral__c</fullName>
    <label>Contact</label>
    <type>Phone</type>
</CustomField>