partial/force-app/main/default/objects/Lead/fields/Customer_Lead__c.field-meta.xml
<CustomField>
    <fullName>Customer_Lead__c</fullName>
    <label>Customer/Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>