partial/force-app/main/default/objects/Lead/fields/Day_of_Week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Week__c</fullName>
    <formula>IF(WeekDay__c=1, &apos;SUN&apos;,
IF(
WeekDay__c=2, &apos;MON&apos;,
IF(WeekDay__c=3,&apos;TUES&apos;,
IF(
WeekDay__c=4,&apos;WED&apos;,
IF(WeekDay__c=5,&apos;THUR&apos;,
IF(WeekDay__c=6,&apos;FRI&apos;,
&apos;SAT&apos;
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Week</label>
    <type>Text</type>
</CustomField>