partial/force-app/main/default/objects/Lead/fields/DuplicateRuleCheck__c.field-meta.xml
<CustomField>
    <fullName>DuplicateRuleCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DuplicateRuleCheck</label>
    <type>Checkbox</type>
</CustomField>