partial/force-app/main/default/objects/Lead/fields/DXF_Ext_Prop_ID__c.field-meta.xml
<CustomField>
    <fullName>DXF_Ext_Prop_ID__c</fullName>
    <description>To capture the External Id of the Property/Project from Website/External system</description>
    <label>DXF_Ext_Prop_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>