partial/force-app/main/default/objects/Lead/fields/DXF_Ext_User_ID__c.field-meta.xml
<CustomField>
    <fullName>DXF_Ext_User_ID__c</fullName>
    <description>To capture the External System User Id</description>
    <label>DXF_Ext_User_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>