partial/force-app/main/default/objects/Lead/fields/DXF_SF_Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>DXF_SF_Unit_ID__c</fullName>
    <label>DXF SF Unit Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>