partial/force-app/main/default/objects/Lead/fields/EmailReferral__c.field-meta.xml
<CustomField>
    <fullName>EmailReferral__c</fullName>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>