partial/force-app/main/default/objects/Lead/fields/Existing_Record__c.field-meta.xml
<CustomField>
    <fullName>Existing_Record__c</fullName>
    <label>Existing Record</label>
    <length>25</length>
    <type>Text</type>
</CustomField>