partial/force-app/main/default/objects/Lead/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <label>Facebook</label>
    <length>50</length>
    <type>Text</type>
</CustomField>