partial/force-app/main/default/objects/Lead/fields/Fly_in_Program__c.field-meta.xml
<CustomField>
    <fullName>Fly_in_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fly in Program</label>
    <type>Checkbox</type>
</CustomField>