partial/force-app/main/default/objects/Lead/fields/Lead_DB_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_DB_Id__c</fullName>
    <label>Web_Lead_Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>