partial/force-app/main/default/objects/Lead/fields/MarketsInterestedIn__c.field-meta.xml
<CustomField>
    <fullName>MarketsInterestedIn__c</fullName>
    <label>Markets Interested In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>