partial/force-app/main/default/objects/Lead/fields/NameReferral__c.field-meta.xml
<CustomField>
    <fullName>NameReferral__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>