partial/force-app/main/default/objects/Lead/fields/Office_ID__c.field-meta.xml
<CustomField>
    <fullName>Office_ID__c</fullName>
    <label>Office ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>