partial/force-app/main/default/objects/Lead/fields/Portal_Lead__c.field-meta.xml
<CustomField>
    <fullName>Portal_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Lead</label>
    <type>Checkbox</type>
</CustomField>