partial/force-app/main/default/objects/Lead/fields/Property_Interested__c.field-meta.xml
<CustomField>
    <fullName>Property_Interested__c</fullName>
    <description>Created to capture the Properties Interested In which Area</description>
    <label>Property Interested</label>
    <length>30</length>
    <type>Text</type>
</CustomField>