partial/force-app/main/default/objects/Lead/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <description>To capture the size of the building</description>
    <label>Property Size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>