partial/force-app/main/default/objects/Lead/fields/Telegram__c.field-meta.xml
<CustomField>
    <fullName>Telegram__c</fullName>
    <label>Telegram</label>
    <length>40</length>
    <type>Text</type>
</CustomField>