partial/force-app/main/default/objects/Lead/fields/Twitter__c.field-meta.xml
<CustomField>
    <fullName>Twitter__c</fullName>
    <label>Twitter</label>
    <length>30</length>
    <type>Text</type>
</CustomField>