partial/force-app/main/default/objects/Lead/fields/Valuer_Contacted_Yes__c.field-meta.xml
<CustomField>
    <fullName>Valuer_Contacted_Yes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created to capture the whether Valuer contacted</description>
    <label>Valuer Contacted Yes?</label>
    <type>Checkbox</type>
</CustomField>