partial/force-app/main/default/objects/Lead/fields/Wechat__c.field-meta.xml
<CustomField>
    <fullName>Wechat__c</fullName>
    <label>Wechat</label>
    <length>40</length>
    <type>Text</type>
</CustomField>