partial/force-app/main/default/objects/Lead/fields/WeekDay__c.field-meta.xml
<CustomField>
    <fullName>WeekDay__c</fullName>
    <formula>WEEKDAY(DateValue(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WeekDay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>