partial/force-app/main/default/objects/Lead/recordTypes/Business_Lead.recordType-meta.xml
<RecordType>
    <fullName>Business_Lead</fullName>
    <active>false</active>
    <businessProcess>Business Account</businessProcess>
    <label>Business Lead</label>
</RecordType>