partial/force-app/main/default/objects/Lead/recordTypes/Individual_Lead.recordType-meta.xml
<RecordType>
    <fullName>Individual_Lead</fullName>
    <active>true</active>
    <businessProcess>Person Account</businessProcess>
    <label>Individual Lead</label>
</RecordType>