partial/force-app/main/default/objects/Lead/validationRules/Duplicate_Record_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Duplicate_Record_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>DuplicateRuleCheck__c</errorConditionFormula>
    <errorMessage>Alert! Duplicate Record Found</errorMessage>
</ValidationRule>