partial/force-app/main/default/objects/Lead/validationRules/NoCommunicationMethod.validationRule-meta.xml
<ValidationRule>
    <fullName>NoCommunicationMethod</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK(Email) &amp;&amp; ISBLANK(Phone) &amp;&amp; ISBLANK(MobilePhone)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>At least one Communication Method (Email / Mobile / Phone) needs to be populated.</errorMessage>
</ValidationRule>