partial/force-app/main/default/objects/Lead/listViews/All_Individual_Leads.listView-meta.xml
<ListView>
    <fullName>All_Individual_Leads</fullName>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.RECORDTYPE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>MarketsInterestedIn__c</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Lead_Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.Individual_Lead</value>
    </filters>
    <label>All Individual Leads</label>
</ListView>