partial/force-app/main/default/objects/Lead/listViews/LeadQueueManagementAdmin_Lead.listView-meta.xml
<ListView>
    <fullName>LeadQueueManagementAdmin_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Lead Queue: Management Admin</label>
    <queue>LeadQueueManagementAdmin</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>